Mobile fixes: publication card order, badge overlay, hide code-block icon on small screens

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -33,6 +33,12 @@ div.highlighter-rouge, figure.highlight {
   }
 }
 
+@include breakpoint(max-width $small) {
+  div.highlighter-rouge, figure.highlight {
+    &:before { display: none; }
+  }
+}
+
 .highlighter-rouge{
   background-color: #03228d;
   color: white;
