--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -66,7 +66,15 @@
     display: flex;
     width: 100%;
     height: clamp(180px, 18vw, 240px);
-    order: 2;
+    order: 1;
+    flex: 1 1 100%;
+    position: relative;
+    
+    > div {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
     img {
       width: auto;
       height: 100%;
@@ -79,7 +87,9 @@
 
   .paper-box-text {
     max-width: 100%;
-    order: 1;
+    order: 2;
+    flex: 1 1 100%;
+    margin-top: 0.6em;
   }
 
   @include breakpoint($medium) {
@@ -118,11 +128,13 @@ $scroll_offset: 0;
   padding-left: 1rem;
   padding-right: 1rem;
   position: absolute;
-  margin-top: 0.5em;
-  margin-left: -0.5em;
+  top: 0.5em;
+  left: 0.5em;
   color: white;
   background-color: #00369f;
   font-size: 0.8em;
+  border-radius: 6px;
+  pointer-events: none;
 }
 body {
   font-size: 18px; // 默认大多是16px，你可以根据喜好改为 18~20px
